apps/security/test-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test2
  namespace: security
spec:
  containers:
  - name: test2
    image: busybox:1.36
    command: ["sleep", "3600"]
