apps/security/test-pod3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test3
  namespace: security
spec:
  containers:
  - name: test3
    image: busybox:1.36
    command: ["sleep", "3600"]
